syntax = "proto3";
package misk.db.protos.feature;

option java_package = "misk.db.protos.feature";

import "misk/db/feature/FeatureConfigProto.proto";
import "google/protobuf/timestamp.proto";

message Feature {
  /* Unique identifier for a Feature. */
  string name = 1;
  /* Config including evaluation rules for a Feature. */
  misk.db.protos.feature.FeatureConfig config = 2;
  /* Created at timestamp. */
  google.protobuf.Timestamp created_at = 3;
  /* Updated at timestamp. */
  google.protobuf.Timestamp updated_at = 4;

}